# ameise-vision

./: .gitmodules  README.md  setup.sh
config/camera/: front.yaml
config/rviz/: licam.rviz
launch/: start_pipeline.sh
launch/camera/: CMakeLists.txt  package.xml
launch/camera/config/: front.yaml
launch/camera/config/calib/: ost.yaml
launch/camera/launch/: pylon_camera_front.launch
launch/lidar/: CMakeLists.txt  package.xml
launch/lidar/launch/: ouster.launch
libraries/: build_trt_oss.sh
libraries/onnx2trt/: CMakeLists.txt  package.xml
libraries/tensorrt/: CMakeLists.txt  package.xml
runnables/perception/image_view/: CMakeLists.txt  package.xml
runnables/perception/image_view/src/: main.cpp
runnables/perception/mono_depth/: package.xml
runnables/perception/qr_finder/: CMakeLists.txt  main.py  package.xml
scripts/: start_lidar.sh  start_rviz.sh
vision_all/: CMakeLists.txt  README.md  package.xml
