<?xml version="1.0"?>
<package format="2">
  <name>vision_all</name>
  <version>0.0.1</version>
  <description>The vision_all package</description>
  <maintainer email="ameise@todo.todo">Victor Kallenbach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>dnb_msgs</exec_depend>
  <exec_depend>camera_control_msgs</exec_depend>
  <exec_depend>pylon_camera</exec_depend>
  <exec_depend>camera_launch_config</exec_depend>
  <exec_depend>ouster_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
