<?xml version="1.0"?>
<package format="2">
  <name>lidar_launch_config</name>
  <version>0.0.1</version>
  <description>Package for lidar launch configs</description>
  <maintainer email="ameise@todo.todo">Victor Kallenbach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
