<?xml version="1.0"?>
<package format="2">
  <name>tensorrt_oss</name>
  <version>0.0.1</version>
  <description>OpenSource TensorRT (ROS Wrapper)</description>
  <maintainer email="ameise@todo.todo">Victor Kallenbach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Fix deps here -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
