<?xml version="1.0"?>
<package format="2">
  <name>image_view_dbg</name>
  <version>0.0.1</version>
  <description>lel</description>
  <maintainer email="ameise@todo.todo">Victor Kallenbach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- Fix deps here -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
