<?xml version="1.0"?>
<package format="2">
  <name>qr_finder</name>
  <version>0.0.1</version>
  <description>Runnable for mono depth estimation</description>
  <maintainer email="ameise@todo.todo">Victor Kallenbach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
